# ComfyUI-Wiki-Workflows

./: .gitignore  README.md  nodes.py  pyproject.toml
.github/workflows/: publish_action.yml
workflows/: Wan2.2_Kijai_t2v.json  flux.1-kontext-dev-gguf.json  flux.1-kontext-dev-nunchaku.json  flux.1-kontext-dev-teacache.json  flux.1-krea-dev-gguf.json  flux.1-krea-dev-nunchaku.json  image_qwen_image_gguf.json
workflows/legacy/SD3.5/: sd3.5-t2i-fp16-workflow.json  sd3.5-t2i-fp8-scaled-workflow.json
workflows/legacy/advance/: lumina-2-text2img-comfyui-wiki.com.json
workflows/legacy/basic/: SD1.5-basic-lora.json  basic-embedding.json  basic-outpainting-workflow.json  inpaint.json  sd1.5-inpaint-comfyui-wiki.com.json  sd1.5-upscale-image-1-comfyui-wiki.com.json  sd1.5-upscale-image-2-comfyui-wiki.com.json
workflows/legacy/comfyui-nodes/: LoraLoaderModelOnly-toy-you.json  UNET-Loader.json
workflows/legacy/contorlnet/: SD1.5-Controlnet-Canny-comfyui-wiki.json  SD1.5-controlnet-multi-controlnets-comfyui-wiki.com.json  SD1.5-controlnet-openpose-img-comfyui-wiki.com.json  SD1.5-controlnet-openpose-preprocessor-comfyui-wiki.com.json  sd1.5-controlnet-basic-comfyui-wiki.com.json  sd1.5-controlnet-depth-comfyui-wiki.com.json
workflows/legacy/deepseek/: janus-pro-comfyui-wiki.com.json
workflows/legacy/flux/: Flux-under-12GB-VRAM-Workflow.json  Flux_GGUF_img2img.json  flux-1-dev-gguf-example.json  flux-redux-model-example.json  flux_dev_checkpoint_example.json  flux_dev_nf4_example.json  flux_schnell_checkpoint_example.json
(+4 files in other folders)
